[gd_scene load_steps=2 format=3 uid="uid://ftkh155jwal2"]

[ext_resource type="Script" path="res://Scenes/MicroGamesHandler/Scripts/MicroGamesHandler.gd" id="1_4vqmy"]

[node name="MicroGamesHandler" type="Node2D"]
process_mode = 1
script = ExtResource("1_4vqmy")

[node name="WinLossRect" type="ColorRect" parent="."]
process_mode = 3
visible = false
top_level = true
anchors_preset = -1
anchor_left = 0.465
anchor_top = 0.383
anchor_right = 0.535
anchor_bottom = 0.481
offset_left = 0.319946
offset_top = -0.184006
offset_right = -0.320007
offset_bottom = 0.311981
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="WinLabel" type="Label" parent="WinLossRect"]
visible = false
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "You Win!"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="LossLabel" type="Label" parent="WinLossRect"]
visible = false
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "You Lose!"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="SubViewPortContainer" type="SubViewportContainer" parent="."]
process_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -255.0
offset_top = -264.0
offset_right = 257.0
offset_bottom = 248.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="SubViewPort" type="SubViewport" parent="SubViewPortContainer"]
handle_input_locally = false
render_target_update_mode = 4
